--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,9 @@ Description: This package is a cleaning protocol for distributional data and an
 Encoding: UTF-8
 Type: Package
 License: GPL-2
-Title: A Package to Clean/Test Georeferenced Data.
-Version: 1.016-0125
-Date: 2016-01-25
+Title: A Package to Clean/Test Georeferenced Data
+Version: 1.016-0317
+Date: 2016-03-17
 Authors@R: c(person("Viviana", "R-Alarcon", role = c("aut", "cre"),
     email = "alarconvv@gmail.com"),
     person("Daniel R", "Miranda-Esquivel", role = "aut",
